# pyexcept

./: README.md  pyproject.toml
src/pyexcept/: _main.py
